hphp/test/zend/good/ext-standard/bug49244.php
<?php

for ($i = 0; $i < 10; $i++) {
	printf("{%f} %1\$f\n", pow(-1.0, 0.3));
	printf(b"{%f} %1\$f\n", pow(-1.0, 0.3));
}

?>